# kickoff-ml-project

./: .condarc  .env  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  run_docker.sh
binder/: condaenv.49pdvrm4.requirements.txt  environment.yml
