[tool.poetry]
name = "ml-venv"
version = "0.1.0"
description = "Kickoff Machine Learning Project"
authors = ["Bryan Nguyen <dongchirua@live.com>"]
license = "Apache License"
readme = "README.md"
repository = "https://github.com/dongchirua/kickoff-ml-project"
keywords = ["bootstrap", "machine learning"]
classifiers = [
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pandas = "^2.0.3"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
evaluate = "^0.4.0"
click = "^8.1.6"
datasets = "^2.13.1"
nltk = "^3.8.1"
captum = "^0.6.0"
dvc = "^3.6.0"
networkx = {extras = ["default"], version = "^3.1"}

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyterlab = "^4.0.3"
panel = "^1.2.0"
ipywidgets = "^8.0.7"
wandb = "^0.15.5"
flake8 = "^6.0.0"

[tool.poetry.group.cpu.dependencies]
torch = {version = "^2.0.1+cpu", source = "torch"}
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
torch-geometric = "^2.3.1"
transformers = {extras = ["sentencepiece"], version = "^4.31.0"}
pytorch-lightning = "^2.0.5"
torchmetrics = "^1.0.1"
pyg-lib = {version = "^0.2.0+pt20cpu", source = "pyg"}
torch-scatter = {version = "^2.1.1+pt20cpu", source = "pyg"}
torch-sparse = {version = "^0.6.17+pt20cpu", source = "pyg"}
torch-cluster = {version = "^1.6.1+pt20cpu", source = "pyg"}
torch-spline-conv = {version = "^1.2.2+pt20cpu", source = "pyg"}

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.0.0+cpu.html"
priority = "explicit"

[[tool.poetry.source]]
name = "pyg-cu117"
url = "https://data.pyg.org/whl/torch-2.0.0+cu117.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
