[tool.poetry]
name = "ml-venv"
version = "1.1.0"
description = "Kickoff Machine Learning Project"
authors = ["Bryan Nguyen <dongchirua@live.com>"]
license = "Apache License"
readme = "README.md"
repository = "https://github.com/dongchirua/kickoff-ml-project"
keywords = ["bootstrap", "machine learning", "deep learning", "LLM", "GNN", "Linux"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Cuda :: 12.4"
]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pandas = "^2.2.0"
matplotlib = "^3.7.2"
scipy = "^1.14.0"
evaluate = "^0.4.3"
click = "^8.1.6"
dvc = "^3.56.0"
networkx = {extras = ["default"], version = "^3.1"}
torch = {version = "2.4.1+cu124", source = "torch-cu124"}
torchvision = {version = "0.19.1", source = "torch-cu124"}
torchaudio = {version = "2.4.1", source = "torch-cu124"}
torch-geometric = "^2.6.1"
pyg-lib = {version = "0.4.0+pt24cu124", source = "pyg_lib-cu124"}
torch-scatter = {version = "2.1.2+pt24cu124", source = "pyg_lib-cu124"}
torch-sparse = {version = "0.6.18+pt24cu124", source = "pyg_lib-cu124"}
torch-cluster = {version = "1.6.3+pt24cu124", source = "pyg_lib-cu124"}
torch-spline-conv = {version = "1.2.2+pt24cu124", source = "pyg_lib-cu124"}
transformers = {extras = ["sentencepiece"], version = "^4.46.0"}
lightning = "^2.4.0"
torchmetrics = "^1.5.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
panel = "^1.5.3"
ipywidgets = "^8.1.5"
wandb = "^0.18.6"
flake8 = "^7.1.0"
jupyterlab = "^4.3.0"

[[tool.poetry.source]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pyg_lib-cu124"
url = "https://data.pyg.org/whl/torch-2.4.0+cu124.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
